fix: deployment issues

--- a/lib/docs/index.mdx
+++ b/lib/docs/index.mdx
@@ -1,8 +1,40 @@
 ---
 title: Getting Started
 description: Welcome to 8star Labs UI
+component: true
+links:
+  doc: https://react-day-picker.js.org
 ---
 
 # Getting Started
+
+Welcome to 8star Labs UI component library.
+
+<ComponentSource
+  name="status-indicator"
+  title="components/ui/status-indicator.tsx"
+/>
+
+Welcome to 8star Labs UI component library.
+Welcome to 8star Labs UI component library.
+
+Welcome to 8star Labs UI component library.
+Welcome to 8star Labs UI component library.
+
+Welcome to 8star Labs UI component library.
+Welcome to 8star Labs UI component library.
+Welcome to 8star Labs UI component library.
+Welcome to 8star Labs UI component library.
+
+Welcome to 8star Labs UI component library.
+Welcome to 8star Labs UI component library.
+
+Welcome to 8star Labs UI component library.
+Welcome to 8star Labs UI component library.
+Welcome to 8star Labs UI component library.
+
+Welcome to 8star Labs UI component library.
+Welcome to 8star Labs UI component library.
+Welcome to 8star Labs UI component library.
 
 Welcome to 8star Labs UI component library.
