docs: added more documentation

--- a/lib/docs/(root)/index.mdx
+++ b/lib/docs/(root)/index.mdx
@@ -1,13 +1,20 @@
 ---
-title: Getting Started
-description: Welcome to 8StarLabs UI
+title: 8StarLabs UI
+description: Introduction
 ---
 
 # Getting Started
 
-Welcome to 8StarLabs UI component library.
+8StarLabs UI is a component library and custom registry built on top of shadcn/ui to help you build beautiful frontend experiences faster. It provides pre-built components that are niche and unique.
 
-<ComponentSource
-  name="status-indicator"
-  title="components/ui/status-indicator.tsx"
-/>
+Components are available via the `npx shadcn@latest add` command.
+
+```bash
+npx shadcn@latest add https://ui.8starlabs.io/r/<component>.json
+```
+
+For example, to install the Status Indicator component, you can run:
+
+```bash
+npx shadcn@latest add https://ui.8starlabs.io/r/status-indicator.json
+```
