--- a/lib/docs/(root)/setup.mdx
+++ b/lib/docs/(root)/setup.mdx
@@ -1,37 +1,26 @@
 ---
 title: Setup
-description: Welcome to 8StarLabs UI
+description: Getting started with 8StarLabs UI
 ---
 
-# Getting Started
+Installing the 8StarLabs UI components is simple with the shadcn/ui CLI. You can add any component from our library to your Next.js project using the following command:
 
-Welcome to 8StarLabs UI component library.
+```bash
+npx shadcn@latest add https://ui.8starlabs.io/r/<component>.json
+```
 
-<ComponentSource
-  name="status-indicator"
-  title="components/ui/status-indicator.tsx"
-/>
+## Prerequisites
 
-Welcome to 8star Labs UI component library.
-Welcome to 8star Labs UI component library.
+Before installing 8StarLabs UI, ensure your environment meets these requirements:
 
-Welcome to 8star Labs UI component library.
-Welcome to 8star Labs UI component library.
+- [Node.js](https://nodejs.org/) version 18 or later
+- A [Next.js](https://nextjs.org/) project
+- [shadcn/ui](https://ui.shadcn.com/) setup in your project. If you don't have it setup, running any install command will set it up for you.
 
-Welcome to 8star Labs UI component library.
-Welcome to 8star Labs UI component library.
-Welcome to 8star Labs UI component library.
-Welcome to 8star Labs UI component library.
+## Installing Components
 
-Welcome to 8star Labs UI component library.
-Welcome to 8star Labs UI component library.
+You can install 8StarLabs UI components using the `shadcn/ui` CLI which adds the selected component’s code and any needed dependencies to your project.
 
-Welcome to 8star Labs UI component library.
-Welcome to 8star Labs UI component library.
-Welcome to 8star Labs UI component library.
+The CLI will download the component's code and integrate it into your project's directory (usually under your components folder).
 
-Welcome to 8star Labs UI component library.
-Welcome to 8star Labs UI component library.
-Welcome to 8star Labs UI component library.
-
-Welcome to 8star Labs UI component library.
+After running the command, you should see a confirmation in your terminal that the files were added. You can then proceed to use the component in your code.
