--- a/lib/docs/components/status-indicator.mdx
+++ b/lib/docs/components/status-indicator.mdx
@@ -48,7 +48,7 @@ import StatusIndicator from "@/components/ui/status-indicator";
 
 ## API Reference
 
-| Prop    | Type                                       |
-| ------- | ------------------------------------------ |
-| `state` | `"active" \| "down" \| "fixing" \| "idle"` |
-| `label` | `string`                                   |
+| Prop    | Type                                       | Description                                             |
+| ------- | ------------------------------------------ | ------------------------------------------------------- |
+| `state` | `"active" \| "down" \| "fixing" \| "idle"` | Optional. The current state of the status indicator.    |
+| `label` | `string`                                   | Optional. A descriptive label for the status indicator. |
