--- a/lib/docs/components/system-banner.mdx
+++ b/lib/docs/components/system-banner.mdx
@@ -65,9 +65,9 @@ export default function RootLayout({
 
 ## API Reference
 
-| Prop    | Type                                             |
-| ------- | ------------------------------------------------ |
-| `text`  | `string` (default: `"Development Mode"`)         |
-| `color` | `string` (default: `"bg-orange-500"`)            |
-| `size`  | `"xs" \| "sm" \| "md" \| "lg"` (default: `"xs"`) |
-| `show`  | `boolean` (default: `true`)                      |
+| Prop    | Type                           | Default              | Description                                   |
+| ------- | ------------------------------ | -------------------- | --------------------------------------------- |
+| `text`  | `string`                       | `"Development Mode"` | Optional. The text to display in the banner.  |
+| `color` | `string`                       | `"bg-orange-500"`    | Optional. The background color of the banner. |
+| `size`  | `"xs" \| "sm" \| "md" \| "lg"` | `"xs"`               | Optional. The size of the banner.             |
+| `show`  | `boolean`                      | `true`               | Optional. Whether to show the banner.         |
