feat: improved scrolling experience and documentation

--- a/lib/docs/(root)/usage.mdx
+++ b/lib/docs/(root)/usage.mdx
@@ -11,9 +11,7 @@ Once an 8StarLabs UI component is installed, you can import it and use it in you
 
 After installing 8StarLabs UI components, you can use them in your application like any other React component. For example:
 
-```tsx showLineNumbers
-"use client";
-
+```tsx {1,6} showLineNumbers title="app/page.tsx"
 import { StatusIndicator } from "@/components/ui/status-indicator";
 
 export default function Page() {
