--- a/lib/docs/components/system-banner.mdx
+++ b/lib/docs/components/system-banner.mdx
@@ -40,8 +40,7 @@ import SystemBanner from "@/components/ui/system-banner";
   to ensure it appears above all other content.
 </Callout>
 
-```tsx showLineNumbers
-// In layout.tsx or _app.tsx
+```tsx {9-14} showLineNumbers title="app/layout.tsx"
 export default function RootLayout({
   children
 }: {
